swagger documentaion links has been improved
