# routes/api.php
@@ -1,5 +1,8 @@
 <?php
 
+
+use App\Http\Controllers\FileController;
+use App\Http\Controllers\ImageController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,3 +20,6 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+Route::post('files', [FileController::class, 'uploadSingleFile']);
+Route::post('images', [ImageController::class, 'uploadSingleImage']);
